Bug 318259 - KOrganizer misses the opportunity to restore a closed appointment.
Summary: KOrganizer misses the opportunity to restore a closed appointment.
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.10.0
Platform: openSUSE Linux
: NOR critical
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-04-12 19:28 UTC by Christopher Yeleighton
Modified: 2013-06-08 21:19 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christopher Yeleighton 2013-04-12 19:28:28 UTC
When the operator closes the appointment window, the question whether to discard the appointment appears too late and in vain.

Reproducible: Always

Steps to Reproduce:
1. Tell KOrganizer to create a new appointment. 
2. Set appointment title to some value.
3. Tell the window manager to close the appointment window.
4. Tell KOrganizer not to discard the appointment.
Actual Results:  
3. The appointment window disappears.  KOrganizer asks whether to discard the appointment.
4. (Nothing happens.)

Expected Results:  
4. The appointment restored.
Comment 1 Allen Winter 2013-06-08 21:19:36 UTC
Git commit 2a8a21b2dc2c41bfe8aa21bd9455de9057850af5 by Allen Winter.
Committed on 08/06/2013 at 23:17.
Pushed by winterz into branch 'master'.

catch a closeEvent in the IncidenceDialog, detect ifDirty and allow
the user a chance to continue without cancelling.
FIXED-IN: 4.11
REVIEW: 110900

M  +18   -1    incidenceeditor-ng/incidencedialog.cpp
M  +3    -0    incidenceeditor-ng/incidencedialog.h

http://commits.kde.org/kdepim/2a8a21b2dc2c41bfe8aa21bd9455de9057850af5