catch a closeEvent in the IncidenceDialog, detect ifDirty and allow the user a chance to continue without cancelling.

BUG: 318259
FIXED-IN: 4.11
REVIEW: 110900