incidenceeditor-ng/incidencedialog.h
@@ -85,6 +85,9 @@ class INCIDENCEEDITORS_NG_EXPORT IncidenceDialog : public KDialog
      */
     void incidenceCreated(const Akonadi::Item &);
 
+  protected:
+    virtual void closeEvent( QCloseEvent *event );
+
   protected Q_SLOTS:
     virtual void slotButtonClicked( int button );
     void handleSelectedCollectionChange( const Akonadi::Collection &collection );
